# snake

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp  snake_cpp.rar
include/: random.hpp  snake.hpp  vec2d.hpp
src/: main.cpp  snake.cpp  vec2d.cpp
